Create index.html for Trio-Closet website with modern layout, color scheme, and navigation.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trio Closet - Fashion and Apparel</title>
+    <title>Trio Closet - Fashion & Apparel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,64 +13,54 @@
             color: #333;
         }
         header {
-            background-color: brown;
-            color: white;
-            padding: 15px;
+            background-color: #8B4513; /* Brown */
+            color: gold;
+            padding: 1rem;
             text-align: center;
         }
         nav {
-            margin: 10px 0;
+            display: flex;
+            justify-content: center;
+            background-color: #D2691E; /* A lighter shade of brown */
         }
         nav a {
             color: gold;
             padding: 14px 20px;
             text-decoration: none;
-            text-transform: uppercase;
+            text-align: center;
+            transition: background-color 0.3s;
         }
         nav a:hover {
-            background-color: gold;
-            color: brown;
+            background-color: #FFD700; /* Gold */
         }
         main {
             padding: 20px;
         }
         footer {
             text-align: center;
-            padding: 10px;
-            background-color: brown;
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            padding: 20px;
+            background-color: #8B4513;
+            color: gold;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Welcome to Trio Closet</h1>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#products">Products</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <p>Your go-to fashion and apparel website</p>
     </header>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#shop">Shop</a>
+        <a href="#contact">Contact</a>
+    </nav>
     <main>
-        <section id="about">
-            <h2>About Us</h2>
-            <p>At Trio Closet, we offer a stylish selection of fashion and apparel for everyone. Our commitment to quality and sustainability drives us to curate the best products for our customers.</p>
-        </section>
-        <section id="products">
-            <h2>Our Products</h2>
-            <p>Explore our wide range of fashion items designed to keep you looking your best.</p>
-            <!-- Products list can be dynamically generated here -->
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Email us at: info@triocloset.com</p>
-        </section>
+        <h2>Featured Products</h2>
+        <p>Explore the latest trends in fashion.</p>
     </main>
     <footer>
-        <p>&copy; 2026 Trio Closet - All Rights Reserved</p>
+        <p>&copy; 2026 Trio Closet. All rights reserved.</p>
     </footer>
 </body>
 </html>
